Commented the MovieAdapter class

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile files('libs/YouTubeAndroidPlayerApi.jar')
     apt 'net.simonvt.schematic:schematic-compiler:0.6.3'
     compile 'net.simonvt.schematic:schematic:0.6.3'
+    compile 'org.jetbrains:annotations-java5:15.0'
 }
